Bug 473577 - Krunner items are not centered vertically within container (*see screenshot).
Summary: Krunner items are not centered vertically within container (*see screenshot).
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 476730 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-20 19:52 UTC by djmenig
Modified: 2023-11-14 15:10 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krunner (135.29 KB, image/png)
2023-08-20 19:52 UTC, djmenig
Details

Note You need to log in before you can comment on or make changes to this bug.
Description djmenig 2023-08-20 19:52:42 UTC
Created attachment 161082 [details]
Krunner

SUMMARY
The Krunner items (configure menu button, search bar, help menu button, and pin button) are not centered horizontally within their container.


STEPS TO REPRODUCE
1. Launcher krunner
2. Observe UI

OBSERVED RESULT
Misaligned UI

EXPECTED RESULT
Centered UI

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-26-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-08-31 19:09:09 UTC
Could be caused by changes to Plasma Dialogs.
Comment 2 Nate Graham 2023-11-09 05:00:26 UTC
*** Bug 476730 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2023-11-13 15:12:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-framework/-/merge_requests/959
Comment 4 Fushan Wen 2023-11-14 00:15:57 UTC
Git commit 70d329628d0e29b59da1f2c3db1d1f2e89a88f3e by Fushan Wen.
Committed on 14/11/2023 at 01:02.
Pushed by fusionfuture into branch 'master'.

krunner: limit window maximum height to screen available height
Related: bug 476939

M  +6    -4    krunner/qml/RunCommand.qml
M  +2    -2    krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/70d329628d0e29b59da1f2c3db1d1f2e89a88f3e
Comment 5 Marco Martin 2023-11-14 10:12:16 UTC
note that this happens only when krunner is configured to pop in the middle of the screen, and another bug is present: there are no borders and shadows
Comment 6 Bug Janitor Service 2023-11-14 11:57:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3534
Comment 7 Marco Martin 2023-11-14 15:10:21 UTC
Git commit d510dfd0bf5e790dccb3dd3bfa9067feca81c2b0 by Marco Martin.
Committed on 14/11/2023 at 16:10.
Pushed by mart into branch 'master'.

Fix krunner visual issues

* When krunner is floating, show borders and shadows (Qt::EdgeFlags() means no edges, not all edges)
* Properly initialize the theme: set _kirigamiTheme before creating the view, as PlasmaWindow in its ctor instantiates the background svg, it needs to have the correct theme from the get go

M  +9    -1    krunner/main.cpp
M  +7    -0    krunner/qml/RunCommand.qml
M  +14   -12   krunner/view.cpp
M  +1    -1    krunner/view.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/d510dfd0bf5e790dccb3dd3bfa9067feca81c2b0