Fix krunner visual issues

* When krunner is floating, show borders and shadows (Qt::EdgeFlags() means no edges, not all edges)
* Properly initialize the theme: set _kirigamiTheme before creating the view, as PlasmaWindow in its ctor instantiates the background svg, it needs to have the correct theme from the get go

BUG:473577