krunner/main.cpp
@@ -22,7 +22,10 @@
 #include <KDBusService>
 #include <KRunner/RunnerManager>
 
+#include <PlasmaQuick/SharedQmlEngine>
+
 #include <iostream>
+#include <qqmlengine.h>
 
 #include "view.h"
 
@@ -115,7 +118,12 @@ int main(int argc, char **argv)
     QObject::connect(&app, &QGuiApplication::commitDataRequest, disableSessionManagement);
     QObject::connect(&app, &QGuiApplication::saveStateRequest, disableSessionManagement);
 
-    View view;
+    PlasmaQuick::SharedQmlEngine sharedEngine;
+    // It is important this to be done before the view is created, as it creates internally a framesvgitem for the background
+    // that needs to use the current plasma theme
+    sharedEngine.engine()->setProperty("_kirigamiTheme", QStringLiteral("KirigamiPlasmaStyle"));
+    sharedEngine.setInitializationDelayed(true);
+    View view(&sharedEngine);
 
     auto updateVisibility = [&]() {
         const QString query = parser.positionalArguments().value(0);
